--- a/index.html
+++ b/index.html
@@ -808,6 +808,11 @@
           <br/><br/>
           If you are interested in joining the seminar as a reviewer, <br> please fill out the
           <a class="link-pill" href="https://forms.gle/8EGDekjKeCAWWMjQ6" target="_blank" rel="noopener">application form →</a>
+      
+          <br/><br/>
+          The submission process for presenting a paper is described below:<br>
+          <a class="link-pill" href="#submission">Go to Submission →</a>
+
         </p>
       </div>
 
@@ -903,7 +908,7 @@
       <div>
         <h2>Zakharov.Day</h2>
         <p class="copy">
-          A complementary meetup is held in <b>March</b> and focuses on corpus-based and computational approaches to language.
+          A complementary meetup is held online in <b>March</b> and focuses on corpus-based and computational approaches to language.
           <br/><br/>
           Zakharov.Day is an open forum for sharing research ideas, ongoing work, methodological insights, and applied studies in language technology.
         </p>
