--- a/index.html
+++ b/index.html
@@ -870,11 +870,10 @@
         </p>
 
         <ul class="bullets" aria-label="Submission requirements">
-          <li>The contributions must be submitted in form of <b>Full research paper (12–15 pages)</b> and present original unpublished work from the authors.</li>
-          <li>Manuscripts submitted to the <b>CompLing–2026</b> workshop must be prepared using the <b>Springer template</b>.</li>
+          <li>The contributions must be submitted in form of <b>Full research paper (12-15 pages)</b> and present original unpublished work from the authors.</li>
+          <li>Manuscripts submitted to the <b>CompLing-2026</b> workshop must be prepared using the <b>Springer template</b>.</li>
           <li>
-            All submissions must be done via the <b>Microsoft CMT</b> system. Detailed instructions on how to submit, as well as links to the required template, are available on the IMS-2026 submission page:
-            <a href="https://ims.itmo.ru/submission.html" target="_blank" rel="noopener">https://ims.itmo.ru/submission.html</a>.
+            All submissions must be done via the <b>Microsoft CMT</b> system. Detailed instructions on how to submit, as well as links to the required template, are available on <a href="https://ims.itmo.ru/submission.html" target="_blank" rel="noopener">the IMS-2026 submission page</a>.
           </li>
         </ul>
       </div>
