--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <title>Seminar CompLing</title>
-  <script src="https://d3js.org/d3.v7.min.js"></script>
+  <script src="d3.v7.min.js"></script>
 
   <style>
     :root{
@@ -870,6 +870,7 @@
         </p>
 
         <ul class="bullets" aria-label="Submission requirements">
+          <li><b>Paper submission deadline</b>: 15 March 2026</li>
           <li>The contributions must be submitted in form of <b>Full research paper (12-15 pages)</b> and present original unpublished work from the authors.</li>
           <li>Manuscripts submitted to the <b>CompLing-2026</b> workshop must be prepared using the <b>Springer template</b>.</li>
           <li>
@@ -886,7 +887,7 @@
             IMS-2026 submission page: <br>
             <a class="link-pill" href="https://ims.itmo.ru/submission.html" target="_blank" rel="noopener">Open page →</a>
             <br/><br/>
-            The CMT link will appear there once it is published.
+            The submission link (Microsoft CMT) will be published on this page later.
           </p>
         </aside>
 
