--- a/index.html
+++ b/index.html
@@ -865,13 +865,23 @@
     <div class="section__inner">
       <div>
         <h2>Submission</h2>
-        <p class="copy">
-          Please prepare your manuscript according to the requirements below.
-        </p>
+        <ul class="bullets" aria-label="Presentation format">
+          <li>
+            <b>Two types of submissions are foreseen</b>: (1) <b>title and abstract only</b> for a talk <b>without publication</b> (this must be indicated in the abstract), and (2) <b>title, abstract, and full paper</b> for publication.
+          </li>
+          <li>
+            <b>Presentation time</b>: 10-15 minutes.
+          </li>
+        </ul>
+
+
 
         <ul class="bullets" aria-label="Submission requirements">
-          <li><b>Paper submission deadline</b>: 15 March 2026</li>
-          <li>The contributions must be submitted in form of <b>Full research paper (12-15 pages)</b> and present original unpublished work from the authors.</li>
+          <li><b>Submission deadline</b>: 15 March 2026</li>
+          <li>
+            Contributions intended for publication must be submitted in the form of a
+            <b>full research paper (12-15 pages)</b> and must present original unpublished work.
+          </li>
           <li>Manuscripts submitted to the <b>CompLing-2026</b> workshop must be prepared using the <b>Springer template</b>.</li>
           <li>
             All submissions must be done via the <b>Microsoft CMT</b> system. Detailed instructions on how to submit, as well as links to the required template, are available on <a href="https://ims.itmo.ru/submission.html" target="_blank" rel="noopener">the IMS-2026 submission page</a>.
